Animate snake head and accept arrow key presses

--- a/snake.html
+++ b/snake.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <h1>Snake</h1>
+  <a href="#" id="pause">Pause</a>
 
   <div id="grid"></div>
+
 
   <p><em>A <a href="http://www.theodinproject.com/courses/javascript-and-jquery/lessons/jquery-and-the-dom">JavaScript/jQuery project</a> by <strong>David Chapman</strong> in partial fulfillment of <a href="http://www.theodinproject.com/">The Odin Project</a></em></p>
   
