--- a/snake.html
+++ b/snake.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Snake</h1>
   <a href="#" id="pause">Pause</a>
+  <p class="score">Score: <span id="score"><strong>0</strong></span></p>
 
   <div id="grid"></div>
 
