Add icons and help text

--- a/snake.html
+++ b/snake.html
@@ -10,6 +10,7 @@
   <h1>Snake</h1>
   <a href="#" id="pause">Pause</a>
   <p class="score">Score: <span id="score"><strong>0</strong></span></p>
+  <p>Control with the arrow keys. Eat the Food. Avoid yourself and the walls!</p>
 
   <div id="grid"></div>
 
