Fix score, decrease grid, add start button

--- a/snake.html
+++ b/snake.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <h1>Snake</h1>
-  <a href="#" id="pause">Pause</a>
-  <p class="score">Score: <span id="score"><strong>0</strong></span></p>
-  <p>Control with the arrow keys. Eat the Food. Avoid yourself and the walls!</p>
+  <a href="#" id="pause" class="paused">Start</a>
+  <p class="score">Score: <span id="score">0</span></p>
+  <p class="description">Control with the arrow keys. Eat the Food. Avoid yourself and the walls!</p>
 
   <div id="grid"></div>
 
